Colaboratory를 통해 생성됨

--- a/7_1.ipynb
+++ b/7_1.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyM7z6GHoIy9bxqEga7xLx7N",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -23,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MangoDingo33/ML/blob/main/7-1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MangoDingo33/ML/blob/main/7_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -64,7 +48,7 @@
       "execution_count": 2,
       "metadata": {
         "id": "fMTyGYIMqUE9",
-        "outputId": "3a6942f5-19c2-4fbe-d95c-31772a736208",
+        "outputId": "e04082b2-3996-4240-eafe-1a81f26984a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -75,13 +59,13 @@
           "name": "stdout",
           "text": [
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
-            "29515/29515 [==============================] - 0s 0us/step\n",
+            "29515/29515 [==============================] - 0s 1us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
-            "26421880/26421880 [==============================] - 0s 0us/step\n",
+            "26421880/26421880 [==============================] - 2s 0us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
             "5148/5148 [==============================] - 0s 0us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
-            "4422102/4422102 [==============================] - 0s 0us/step\n"
+            "4422102/4422102 [==============================] - 1s 0us/step\n"
           ]
         }
       ],
@@ -99,7 +83,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2-r-EgKgqYkK",
-        "outputId": "c16ab468-5418-4d74-e64b-016d836ef097"
+        "outputId": "d0350e35-b5ef-433b-a829-d376fed2c149"
       },
       "outputs": [
         {
@@ -122,7 +106,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LAJGYTkFrS6p",
-        "outputId": "e75cbece-5a5c-4094-a74b-48d9cb8fb07d"
+        "outputId": "2dd3bb7c-59a2-4d86-e194-271af199f188"
       },
       "outputs": [
         {
@@ -146,7 +130,7 @@
           "height": 102
         },
         "id": "lAYiLboglZIz",
-        "outputId": "a0231d39-2d4c-443d-ab5f-b35c557bad99"
+        "outputId": "464de1ff-44d4-4e4a-8545-4f395776557e"
       },
       "outputs": [
         {
@@ -178,7 +162,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SZjVIoyqmVy-",
-        "outputId": "020f24ad-a5c8-41eb-e1fa-f4141d5af65d"
+        "outputId": "6741d6a2-3c10-4b99-ee45-87931cb362ca"
       },
       "outputs": [
         {
@@ -201,7 +185,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Rx32OX7NqNnD",
-        "outputId": "b7b5fd38-9d17-455b-c478-514b2cda951f"
+        "outputId": "3ac9ac98-12e6-4bec-8bd9-c43cae8e8414"
       },
       "outputs": [
         {
@@ -247,7 +231,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kwOFVfpxxuLU",
-        "outputId": "97724ab9-50d7-4c76-e3c9-b04284f765fd"
+        "outputId": "e43fcce3-f89b-46a1-942b-b96d3b77bf03"
       },
       "outputs": [
         {
@@ -270,7 +254,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ui3iJlfLNLzr",
-        "outputId": "eb82be2f-9c70-4472-a21a-13cb7a67bb0f"
+        "outputId": "c3402cf0-7460-43a1-865a-8c9595018e00"
       },
       "outputs": [
         {
@@ -363,7 +347,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G9OwZTRorHWQ",
-        "outputId": "ba9be120-bd51-4874-c215-9ec0ed3457b8"
+        "outputId": "50410534-2bd7-4c22-a68c-61264bc541fb"
       },
       "outputs": [
         {
@@ -386,7 +370,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Van_eJ7BOo-y",
-        "outputId": "7308910e-a32a-4c66-afe8-f40008559924"
+        "outputId": "c27f4336-ec27-4f2c-9b69-3c6cad1835b5"
       },
       "outputs": [
         {
@@ -451,7 +435,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JLLytXw7UcvB",
-        "outputId": "0b785db8-6bd9-4df1-a5a5-c8c453f29ddf"
+        "outputId": "398f25b4-e888-492f-d7b3-bc65ff30bc11"
       },
       "outputs": [
         {
@@ -474,7 +458,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KiZnrOgQP4ps",
-        "outputId": "cb447cf9-2895-44a9-e3ca-af71988c8ef6"
+        "outputId": "72ff4d49-86ea-4c30-9ce4-d793264ab170"
       },
       "outputs": [
         {
@@ -482,22 +466,22 @@
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.6069 - accuracy: 0.7947\n",
+            "1500/1500 [==============================] - 10s 3ms/step - loss: 0.6069 - accuracy: 0.7947\n",
             "Epoch 2/5\n",
-            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.4742 - accuracy: 0.8382\n",
+            "1500/1500 [==============================] - 4s 3ms/step - loss: 0.4742 - accuracy: 0.8382\n",
             "Epoch 3/5\n",
-            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.4508 - accuracy: 0.8474\n",
+            "1500/1500 [==============================] - 4s 3ms/step - loss: 0.4508 - accuracy: 0.8474\n",
             "Epoch 4/5\n",
-            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.4367 - accuracy: 0.8527\n",
+            "1500/1500 [==============================] - 5s 3ms/step - loss: 0.4367 - accuracy: 0.8527\n",
             "Epoch 5/5\n",
-            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.4280 - accuracy: 0.8555\n"
+            "1500/1500 [==============================] - 4s 2ms/step - loss: 0.4280 - accuracy: 0.8555\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7a1272281c30>"
+              "<keras.src.callbacks.History at 0x7fad50bdabf0>"
             ]
           },
           "metadata": {},
@@ -516,21 +500,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OdXPQEXOQIFm",
-        "outputId": "341390c9-5d14-4b50-8632-7bc1493c808e"
+        "outputId": "877ed799-1818-47ac-c4bd-70bfbe659978"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "375/375 [==============================] - 1s 1ms/step - loss: 0.4526 - accuracy: 0.8465\n"
+            "375/375 [==============================] - 1s 2ms/step - loss: 0.4526 - accuracy: 0.8465\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.45262545347213745, 0.8464999794960022]"
+              "[0.45262548327445984, 0.8464999794960022]"
             ]
           },
           "metadata": {},
@@ -541,5 +525,31 @@
         "model.evaluate(val_scaled, val_target)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "provenance": [],
+      "gpuType": "T4",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
